Update send shortcuts for chat inputs

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -366,7 +366,7 @@
                   </div>
                 </div>
                 <div class="doc-chat-meta">
-                  <span class="muted small" id="doc-chat-hint">Enter/Shift+Enter to send</span>
+                  <span class="muted small" id="doc-chat-hint">Cmd+Enter/Ctrl+Enter to send</span>
                   <span class="muted small hidden voice-status" id="doc-chat-voice-status"></span>
                   <span id="doc-chat-status" class="pill pill-idle">idle</span>
                 </div>
