Improve frontend safety, errors, and log performance

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -452,6 +452,7 @@
             <span class="log-legend-item"><span class="log-legend-dot context"></span>Context</span>
           </div>
           <div class="log-container">
+            <button id="log-load-older" class="log-load-btn hidden" title="Load older logs">Load older</button>
             <pre id="log-output" class="log-viewer">(no log loaded)</pre>
             <button id="log-jump-bottom" class="log-jump-btn hidden" title="Jump to latest">↓ Latest</button>
           </div>
