--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -276,6 +276,24 @@
             </div>
           </div>
           <div class="doc-editor">
+            <div id="spec-ingest-patch-main" class="doc-patch-main hidden">
+              <div class="doc-patch-header">
+                <div class="doc-patch-info">
+                  <div class="muted small">Spec ingest patch</div>
+                  <div id="spec-ingest-patch-summary" class="doc-patch-summary"></div>
+                  <div class="doc-patch-legend">
+                    <span class="doc-patch-legend-item doc-patch-legend-add">Added</span>
+                    <span class="doc-patch-legend-item doc-patch-legend-del">Removed</span>
+                  </div>
+                </div>
+                <div class="doc-patch-actions">
+                  <button id="spec-ingest-patch-apply" class="primary sm">Apply Patch</button>
+                  <button id="spec-ingest-patch-reload" class="ghost sm">Reload</button>
+                  <button id="spec-ingest-patch-discard" class="danger sm">Discard</button>
+                </div>
+              </div>
+              <div id="spec-ingest-patch-body" class="doc-patch-body">(no patch)</div>
+            </div>
             <div id="doc-patch-main" class="doc-patch-main hidden">
               <div class="doc-patch-header">
                 <div class="doc-patch-info">
@@ -302,6 +320,15 @@
               <button id="spec-paste" class="ghost hidden" data-short="Paste">Paste</button>
               <button id="ingest-spec" class="ghost hidden" data-short="Ingest">Ingest SPEC → Docs</button>
               <button id="clear-docs" class="danger hidden" data-short="Clear">Clear TODO/PROGRESS/OPINIONS</button>
+            </div>
+            <div id="spec-ingest-followup" class="spec-ingest-followup hidden">
+              <textarea
+                id="spec-ingest-input"
+                rows="1"
+                placeholder="Refine ingest (Ctrl+Enter to send)..."
+                spellcheck="false"
+              ></textarea>
+              <button id="spec-ingest-continue" class="ghost sm">Continue</button>
             </div>
             <div class="doc-actions hidden" id="doc-actions-snapshot">
               <button id="snapshot-generate" class="primary" data-short="Run">Run snapshot</button>
