Interrupt doc chat/spec ingest turns on cancel

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -341,6 +341,7 @@
                 spellcheck="false"
               ></textarea>
               <button id="spec-ingest-continue" class="ghost sm">Continue</button>
+              <button id="spec-ingest-cancel" class="danger sm hidden">Cancel</button>
             </div>
             <div class="doc-actions hidden" id="doc-actions-snapshot">
               <button id="snapshot-generate" class="primary" data-short="Run">Run snapshot</button>
