--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -363,7 +363,6 @@
                   <div class="doc-chat-input-buttons compose-buttons">
                     <button id="doc-chat-voice" class="ghost sm voice-button" title="Hold to talk"></button>
                     <button id="doc-chat-send" class="primary sm" title="Send">↑</button>
-                    <button id="doc-chat-cancel" class="ghost sm hidden" title="Cancel">✕</button>
                   </div>
                 </div>
                 <div class="doc-chat-meta">
@@ -372,6 +371,7 @@
                     <span class="muted small hidden voice-status" id="doc-chat-voice-status"></span>
                   </div>
                   <div class="doc-chat-meta-right">
+                    <button id="doc-chat-cancel" class="ghost sm hidden doc-chat-cancel-inline" title="Cancel">✕</button>
                     <button id="doc-chat-new-thread" class="ghost sm" title="Start a new chat thread">New thread</button>
                     <span id="doc-chat-status" class="pill pill-idle">idle</span>
                   </div>
