Enhance doc chat UI by unifying event and history displays into a single chat stream. Update styles for improved layout and responsiveness. Adjust Makefile for Python versioning and package manager detection. Update .gitignore for better cache management. Modify tests to reflect changes in chat stream structure.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -377,20 +377,7 @@
                   </div>
                 </div>
               </div>
-              <div id="doc-chat-events" class="doc-chat-events hidden">
-                <div class="doc-chat-events-header">
-                  <span>Live updates</span>
-                  <span class="doc-chat-events-count" id="doc-chat-events-count">0</span>
-                  <button id="doc-chat-events-toggle" class="ghost sm hidden">Show more</button>
-                </div>
-                <div class="doc-chat-events-list" id="doc-chat-events-list"></div>
-              </div>
-              <div class="doc-chat-history-panel" id="doc-chat-history-panel">
-                <div class="doc-chat-history-header">
-                  <span>Chat history</span>
-                  <span class="doc-chat-history-count" id="doc-chat-history-count">0</span>
-                </div>
-                <div class="doc-chat-history" id="doc-chat-history"></div>
+              <div class="doc-chat-stream" id="doc-chat-stream">
                 <div id="doc-chat-error" class="doc-chat-error hidden"></div>
               </div>
             </div>
