--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -335,16 +335,6 @@
               <button id="ingest-spec" class="ghost hidden" data-short="Ingest">Ingest SPEC → Docs</button>
               <button id="clear-docs" class="danger hidden" data-short="Clear">Clear TODO/PROGRESS/OPINIONS</button>
             </div>
-            <div id="spec-ingest-followup" class="spec-ingest-followup hidden">
-              <textarea
-                id="spec-ingest-input"
-                rows="1"
-                placeholder="Refine ingest (Ctrl+Enter to send)..."
-                spellcheck="false"
-              ></textarea>
-              <button id="spec-ingest-continue" class="ghost sm">Continue</button>
-              <button id="spec-ingest-cancel" class="danger sm hidden">Cancel</button>
-            </div>
             <div class="doc-actions hidden" id="doc-actions-snapshot">
               <button id="snapshot-generate" class="primary" data-short="Run">Run snapshot</button>
               <button id="snapshot-copy" class="ghost" data-short="Copy">Copy</button>
@@ -545,6 +535,35 @@
         <div class="modal-actions">
           <button id="input-modal-cancel" class="ghost">Cancel</button>
           <button id="input-modal-ok" class="primary">OK</button>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Ingest Spec Modal -->
+    <div id="ingest-modal" class="modal-overlay" hidden>
+      <div
+        class="modal-dialog modal-ingest"
+        role="dialog"
+        aria-modal="true"
+        aria-labelledby="ingest-modal-title"
+        aria-describedby="ingest-modal-message"
+        tabindex="-1"
+      >
+        <span id="ingest-modal-title" class="sr-only">Ingest Spec</span>
+        <div id="ingest-modal-content">
+          <p id="ingest-modal-message">Ready to ingest SPEC into TODO, PROGRESS, and OPINIONS?</p>
+          <div id="ingest-modal-refinement" class="ingest-modal-refinement hidden">
+            <textarea
+              id="ingest-modal-input"
+              rows="3"
+              placeholder="Refine the ingest (optional)..."
+              spellcheck="false"
+            ></textarea>
+          </div>
+        </div>
+        <div class="modal-actions">
+          <button id="ingest-modal-cancel" class="ghost">Cancel</button>
+          <button id="ingest-modal-ok" class="primary">Ingest</button>
         </div>
       </div>
     </div>
