Add OpenCode usage aggregation

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -63,6 +63,7 @@
             <select id="hub-usage-chart-segment" class="usage-chart-select" title="Group" aria-label="Group">
               <option value="none">Total</option>
               <option value="repo">By repo</option>
+              <option value="agent">By agent</option>
             </select>
           </div>
         </div>
@@ -184,6 +185,7 @@
                     </select>
                     <select id="usage-chart-segment" class="usage-chart-select" title="Group" aria-label="Group">
                       <option value="none">Total</option>
+                      <option value="agent">Agent</option>
                       <option value="model">Model</option>
                       <option value="token_type">Token type</option>
                       <option value="model_token">Model + type</option>
