Improve runs modal details

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -814,6 +814,10 @@
             <div class="run-details-title">Diff</div>
             <pre id="run-details-diff" class="run-details-artifact">–</pre>
           </div>
+          <div class="run-details-section">
+            <div class="run-details-title">Final output</div>
+            <pre id="run-details-output" class="run-details-artifact">–</pre>
+          </div>
         </div>
         <div class="modal-actions run-details-actions">
           <a id="run-details-log" class="ghost sm" target="_blank" rel="noreferrer">Open log</a>
